# python-sdk

./: .fernignore  .gitignore  Justfile  README.md  pyproject.toml  reference.md
.fern/: metadata.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
scripts/: e2e_test.py
src/islo/: .fernignore  README.md  __init__.py  base_client.py  client.py  environment.py  raw_base_client.py  reference.md  version.py
src/islo/api_keys/: client.py  raw_client.py
src/islo/auth/: client.py  raw_client.py
src/islo/certificate_authority/: client.py  raw_client.py
src/islo/cloud_roles/: client.py  raw_client.py
src/islo/compute/: client.py  raw_client.py
src/islo/container_registries/: client.py  raw_client.py
src/islo/core/: client_wrapper.py  oauth_token_provider.py
src/islo/credits/: client.py  raw_client.py
src/islo/custom/: __init__.py  auth.py  exec.py  files.py
src/islo/errors/: __init__.py
src/islo/gateway_internal/: client.py  raw_client.py
src/islo/gateway_profiles/: __init__.py  client.py  raw_client.py
src/islo/inference/: client.py  raw_client.py
src/islo/integrations/: client.py  raw_client.py
src/islo/models/: client.py  raw_client.py
src/islo/sandboxes/: client.py  raw_client.py
src/islo/sessions/: client.py  raw_client.py
src/islo/shares/: client.py  raw_client.py
src/islo/snapshots/: client.py  raw_client.py
src/islo/tenants/: client.py  raw_client.py
src/islo/types/: __init__.py  agent_session_event_response.py  agent_session_response.py  all_integrations_policy.py  api_key_response.py  auth_method.py  auth_strategy_schema.py  auth_strategy_schema_mode.py  auth_verifier.py  auth_verifier_five.py  auth_verifier_five_type.py  auth_verifier_four.py  auth_verifier_four_type.py  auth_verifier_one.py  auth_verifier_one_type.py  (+215 more)
tests/: test_auth.py  test_client.py  test_exec.py  test_files.py  test_types.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+18 files in other folders)
