[project]
name = "islo"
version = "0.2.1"
description = "Typed Python SDK for the Islo sandbox platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Islo Labs" }]
keywords = [
    "islo",
    "sdk",
    "sandbox",
    "ai-agents",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://islo.dev"
Repository = "https://github.com/islo-labs/islo-sdk"
Documentation = "https://docs.islo.dev"
Issues = "https://github.com/islo-labs/islo-sdk/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.7,<0.16",
]

[tool.uv.build-backend]
module-name = "islo"
module-root = "src"

[build-system]
requires = [
    "uv_build>=0.10.0,<0.11.0",
]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "src/islo/__init__.py",
    "src/islo/base_client.py",
    "src/islo/core/",
    "src/islo/errors/",
    "src/islo/types/",
    "src/islo/api_keys/",
    "src/islo/auth/",
    "src/islo/certificate_authority/",
    "src/islo/integrations/",
    "src/islo/models/",
    "src/islo/sandboxes/",
    "src/islo/shares/",
    "src/islo/tenants/",
    "src/islo/usage/",
    "src/islo/users/",
    "src/islo/gateway_profiles/",
    "src/islo/snapshots/",
]

[tool.ruff.lint]
select = ["F", "I", "UP"]
